build: use AX_IS_RELEASE() and AX_COMPILER_FLAGS()
The autoconf macros AX_COMPILER_FLAGS_{CFLAGS|GIR|LDFLAGS} test
for compiler and linker support of various flags, and add the flags to
the generated output.

If the command-line option '--enable-compile-warnings' is specified to
'configure', a number of additional warning options is also added to the
output. This is the default.

This update requires the presence of the GNU autoconf-archive in the
system.

--- a/cli/Makefile.am
+++ b/cli/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = mmcli
 
 mmcli_CPPFLAGS = \
+	$(WARN_CFLAGS) \
 	$(MMCLI_CFLAGS) \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/include \
@@ -34,13 +35,17 @@ mmcli_SOURCES = \
 	$(NULL)
 
 mmcli_LDADD = \
-	$(MMCLI_LIBS) \
 	$(top_builddir)/libmm-glib/libmm-glib.la \
+	$(NULL)
+
+mmcli_LDFLAGS = \
+	$(WARN_LDFLAGS) \
+	$(MMCLI_LIBS) \
 	$(NULL)
 
 if WITH_UDEV
 mmcli_CPPFLAGS += $(GUDEV_CFLAGS)
-mmcli_LDADD    += $(GUDEV_LIBS)
+mmcli_LDFLAGS  += $(GUDEV_LIBS)
 endif
 
 completiondir = $(datadir)/bash-completion/completions
