--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,6 +2,14 @@
 noinst_PROGRAMS =
 EXTRA_DIST =
 
+AM_CFLAGS = \
+	$(WARN_CFLAGS) \
+	$(NULL)
+
+AM_LDFLAGS = \
+	$(WARN_LDFLAGS) \
+	$(NULL)
+
 ################################################################################
 # lsudev
 ################################################################################
