--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ BUILT_SOURCES =
 CLEANFILES =
 
 AM_CFLAGS = \
+	$(WARN_CFLAGS) \
 	$(MM_CFLAGS) \
 	$(CODE_COVERAGE_CFLAGS) \
 	$(GUDEV_CFLAGS) \
@@ -26,6 +27,7 @@ AM_CFLAGS = \
 	$(NULL)
 
 AM_LDFLAGS = \
+	$(WARN_LDFLAGS) \
 	$(MM_LIBS) \
 	$(CODE_COVERAGE_LDFLAGS) \
 	$(GUDEV_LIBS) \
