--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -6,6 +6,7 @@ include $(top_srcdir)/gtester.make
 ################################################################################
 
 AM_CFLAGS = \
+	$(WARN_CFLAGS) \
 	$(MM_CFLAGS) \
 	$(CODE_COVERAGE_CFLAGS) \
 	-I$(top_srcdir) \
@@ -27,6 +28,7 @@ LDADD = \
 	$(NULL)
 
 AM_LDFLAGS = \
+	$(WARN_LDFLAGS) \
 	$(MM_LIBS) \
 	$(CODE_COVERAGE_LDFLAGS) \
 	-lutil \
