log: new object logging support
So that we can provide the specific object id in every log associated
to a given object.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,6 +97,10 @@ mm-helper-enums-types.c: Makefile.am $(top_srcdir)/build-aux/mm-enums-template.c
 		$(HELPER_ENUMS_INPUTS) > $@
 
 libhelpers_la_SOURCES = \
+	mm-log-object.h \
+	mm-log-object.c \
+	mm-log.c \
+	mm-log.h \
 	mm-error-helpers.c \
 	mm-error-helpers.h \
 	mm-modem-helpers.c \
@@ -131,7 +135,6 @@ endif
 BUILT_SOURCES += $(HELPER_ENUMS_GENERATED)
 CLEANFILES    += $(HELPER_ENUMS_GENERATED)
 
-
 ################################################################################
 # kerneldevice library
 ################################################################################
@@ -160,6 +163,7 @@ endif
 
 libkerneldevice_la_LIBADD = \
 	$(top_builddir)/libmm-glib/libmm-glib.la \
+	$(builddir)/libhelpers.la \
 	$(NULL)
 
 ################################################################################
@@ -225,7 +229,6 @@ endif
 libport_la_LIBADD = \
 	$(top_builddir)/libqcdm/src/libqcdm.la \
 	$(top_builddir)/libmm-glib/libmm-glib.la \
-	$(builddir)/libhelpers.la \
 	$(builddir)/libkerneldevice.la \
 	$(NULL)
 
@@ -283,8 +286,6 @@ ModemManager_SOURCES = \
 	main.c \
 	mm-context.h \
 	mm-context.c \
-	mm-log.c \
-	mm-log.h \
 	mm-utils.h \
 	mm-private-boxed-types.h \
 	mm-private-boxed-types.c \
