--- a/.gitignore
+++ b/.gitignore
@@ -165,8 +165,8 @@ Makefile.in
 /plugins/test-service-*
 
 /plugins/ublox/mm-ublox-enums-types.[ch]
-
 /plugins/telit/mm-telit-enums-types.[ch]
+/plugins/huawei/mm-huawei-enums-types.[ch]
 
 /test/lsudev
 /test/mmtty
